# LaserCAD_QT

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.e57f7a6  README.md  autoBuild.bat  graphicsview.cpp  graphicsview.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  manager.h  myqgraphicsview.cpp  myqgraphicsview.h  polylineitem.cpp  polylineitem.h  utils.h  variantlineitem.cpp  variantlineitem.h
develop/RTC5/: Demo1.cpp  RTC_Variables.cmake
example/QtEdiableTreeModel/: CMakeLists.txt  default.txt  editabletreemodel.pro  editabletreemodel.qrc  mainwindow.cpp  test.cpp  treeitem.cpp  treeitem.h  treemodel.cpp  treemodel.h  treenode.cpp  treenode.h
example/QtTreeModel/: CMakeLists.txt  main.cpp  simpletreemodel.pro  test.cpp  treeitem.cpp  treeitem.h  treemodel.cpp  treemodel.h
example/RTC4/: DEMO1.cpp  DEMO2.cpp  DEMO3.cpp  DEMO3.cs  DEMO4.cpp  DEMO5.cpp  DEMO_intelliSCAN.cpp  GalvoControl.cpp  GalvoSettings.cpp  GalvoSettings.h  RTC4expl.h  RTC5expl.cpp  RTC5expl.h  RTC6expl.cpp  RTC6expl.h  StdAfx.cpp  StdAfx.h  TestZ.cpp  TestZ.h  ZCalibrationDlg.h  cgalvocardsetting.cpp  cgalvocardsetting.h  resource.h
example/RTC5/: CMakeLists.txt  Demo1.cpp  Demo2.cpp  Demo3.cpp  Demo7.cpp  README.md
example/RTC5Test/: main.cpp
example/leftSideBarLayout/: CMakeLists.txt  editorpage.cpp  editorpage.h  mainwindow.cpp  projectpage.cpp  projectpage.h
header/: css.h  drawcontroller.h  editcontroller.h  editmanager.h  graphicsview.h  hardwarecontroller.cpp  hardwarecontroller.h  itemmanager.h  itemtreewidget.h  logger.h  mainwindow.h  mainwindow.ui  manager.h  projectmanager.cpp  projectmanager.h  protocol.h  scenecontroller.h  style.h  tabwidget.h  titlebar.h  uimanager.h  utils.h
header/CavalierContours/: staticspatialindex.hpp
header/GraphicsItem/: arcitem.h  laseritem.h  polylineitem.h  protocol.h  variantlineitem.h
header/GraphicsView/: arcitem.h  circleitem.h  combineditem.h  editrect.cpp  editrect.h  ellipseitem.h  graphicsitem.h  graphicsmath.h  graphicsview.h  graphicsviewprotocol.h  laseritem.h  lineitem.h  pointitem.cpp  pointitem.h  polygonitem.h  polylineitem.h  protocol.h  rectitem.cpp  rectitem.h  spiralitem.cpp  spiralitem.h
header/ItemTreeWidget/: itemtreewidget.h
header/Keyboard/: keyboardmanager.h
header/LaserWorker/: RTC5protocol.h  laserdevice.h  laserdeviceprotocol.h  laserdevicertc4.cpp  laserdevicertc4.h  laserdevicertc5.cpp  laserdevicertc5.h  laserdevicetest.cpp  laserdevicetest.h  laserworker.cpp  laserworker.h  threadsafequeue.h
header/Manager/: drawmanager.h  editmanager.h  protocol1.h  scenemanager.h  sceneoperation.h  scenestates.h  treemodel.h  treenode.h  uimanager.h
header/MediaPlayer/: player.cpp  player.h
header/MotionStageWorker/: motionstagedevice.cpp  motionstagedevice.h  motionstagedevicegoogol.cpp  motionstagedevicegoogol.h  motionstagedevicetest.cpp  motionstagedevicetest.h  motionstagedevicethorlabs.cpp  motionstagedevicethorlabs.h  motionstageworker.cpp  motionstageworker.h
header/Scene/: drawmanager.h  editmanager.h  scenemanager.h  sceneprotocol.h
header/TabWidget/: tabwidget.h
header/TableViewModel/: tablemodel.h
header/TreeViewModel/: colordelegate.cpp  colordelegate.h  manager.h  treemodel.h  treenode.h  treeview.h  treeviewmodel.h
header/Ui/: css.h  mainwindow.ui  uimanager.h
header/Utils/: css.h  logger.h  utils.hpp
header/hardware/: rtc5.cpp  rtc5.h
lib/GTS/: gts.h  gts.lib
lib/RTC4/: IniFile.cpp  IniFile.h  RTC4D3.hex  RTC4expl.cpp  Scanner.cpp  Scanner.h  ZCalibrationDlg.cpp  defs.h
lib/RTC5/: RTC5expl.c  RTC5expl.cpp  RTC5explTest.c  RTC5explTest.h
lib/RTC6/: RTC6DLL.lib  RTC6DLLx64.lib  RTC6ETH.out  RTC6OUT.out  RTC6RBF.rbf
lib/Thorlabs/: Thorlabs.MotionControl.Benchtop.BrushlessMotor.lib  Thorlabs.MotionControl.Benchtop.DCServo.lib  Thorlabs.MotionControl.Benchtop.NanoTrak.lib  Thorlabs.MotionControl.Benchtop.StepperMotor.lib  Thorlabs.MotionControl.FilterFlipper.lib  Thorlabs.MotionControl.KCube.BrushlessMotor.lib  Thorlabs.MotionControl.KCube.LaserDiode.lib  Thorlabs.MotionControl.KCube.LiquidCrystal.lib  Thorlabs.MotionControl.KCube.NanoTrak.lib  Thorlabs.MotionControl.KCube.Piezo.lib  Thorlabs.MotionControl.KCube.PiezoStrainGauge.lib  Thorlabs.MotionControl.KCube.PositionAligner.lib  Thorlabs.MotionControl.KCube.Solenoid.lib  Thorlabs.MotionControl.KCube.StrainGauge.lib  Thorlabs.MotionControl.ModularRack.lib  Thorlabs.MotionControl.Polarizer.lib  Thorlabs.MotionControl.PositionReadoutEncoder.lib  Thorlabs.MotionControl.TCube.DCServo.lib  Thorlabs.MotionControl.TCube.LaserSource.lib  Thorlabs.MotionControl.TCube.Piezo.lib  Thorlabs.MotionControl.TCube.Quad.lib  Thorlabs.MotionControl.TCube.StepperMotor.lib  Thorlabs.MotionControl.TDIEngine.lib  Thorlabs.MotionControl.VerticalStage.lib  ThorlabsMotion.h
lib/Thorlabs_all/: Thorlabs.MotionControl.Benchtop.Piezo.lib  Thorlabs.MotionControl.Benchtop.PrecisionPiezo.lib  Thorlabs.MotionControl.IntegratedPrecisionPiezo.lib  Thorlabs.MotionControl.IntegratedStepperMotors.lib  Thorlabs.MotionControl.KCube.DCServo.lib  Thorlabs.MotionControl.KCube.InertialMotor.lib  (+10 more)
resource/: button.qrc  resource.qrc
src/: arcitem.cpp  cavaliercontours.cpp  circleitem.cpp  combineditem.cpp  css.cpp  drawcontroller.cpp  drawmanager.cpp  editcontroller.cpp  editmanager.cpp  editrect.cpp  ellipseitem.cpp  graphicsitem.cpp  graphicsmath.cpp  graphicsview.cpp  graphicsviewprotocol.cpp  itemmanager.cpp  itemtreewidget.cpp  keyboardmanager.cpp  laserdevice.cpp  laseritem.cpp  lineitem.cpp  logger.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  manager.cpp  pointitem.cpp  polygonitem.cpp  polylineitem.cpp  projectmanager.cpp  protocol.cpp  rectitem.cpp  scenecontroller.cpp  scenemanager.cpp  sceneoperation.cpp  scenestates.cpp  tablemodel.cpp  titlebar.cpp  treemodel.cpp  treenode.cpp  (+4 more)
style/: format.clang-format
tmp/: laserCAD_20250512_1304.json  laserCAD_20250512_1305.json  laserCAD_20250512_1337.json  laserCAD_20250512_1338.json  laserCAD_20250512_1408.json  laserCAD_20250512_1413.json  laserCAD_20250512_1414.json  laserCAD_20250512_142317.json
(+48 files in other folders)
